= CHANGES

== 1.1.1: 20XX-XX-XX

* [#26686] Supported Rails 2.3.3. [George Montana Harkin]

== 1.1.0: 2009-07-18

* Improved tutorial. [Kazuaki Takase]
* Improvements:
  * API:
    * [#26] Supported to_xml for associations. [achemze]
    * ActiveLdap::Base.delete_all(filter=nil, options={}) ->
      ActiveLdap::Base.delete_all(filter_or_options={}).
      Sure, old method signature is also still supported.
    * belongs_to(:many) with :foreign_key is deprecated.
      Use :primary_key instead of :foreign_key. [Kazuaki Takase]
    * Means of has_many's :primary_key and :foreign_key are inverted.
      [Kazuaki Takase]
    * [experimental] Added ldap_field ActionView helper to
      generate form fileds for a LDAP entry.
  * Suppressed needless attributes updating.
* Dependencies:
  * Re-supported GetText.
  * ActiveRecord 2.3.2 is only supported.

== 1.0.9

* Added documents in Japanese. [Kazuaki Takase]
* Supported Ruby 1.9.1.
  * [#20] [Ruby 1.9 Support] :: Running Tests [Alexey.Chebotar]
* Supported Rails 2.3.2.
  * [#18] [Rails 2.3 Support] :: Running WEBrick Hangs [Alexey.Chebotar]
* Bug fixes:
  * Fixed blank values detection. [David Morton]
  * [#22] Ruby 1.8.6 p287 :: Undefined methods [Alexey.Chebotar]
  * Fixed gem loading. [Tiago Fernandes]
  * Fixed DN change via #base=. [David Morton]
  * Fixed infinite retry on timeout.
  * Fixed needless reconnection.
* API improvements:
  * Removed needless instance methods: #prefix=,
    #dn_attribute=, #sort_by=, #order=, #required_classes=,
    #recommended_classes= and #excluded_classes. [David Morton]
  * Removed obsolete scafoold_al generator.
  * Reduced default :retry_limit.
  * Supported association as parameter. [Joe Francis]
  * Normalized schema attribute name. [Tim Hermans]
  * Suppressed AuthenticationError -> ConnectionError
    conversion on reconnection. [Kazuaki Takase]
  * Added ActiveLdap::Schema#dump.
  * ActiveLdap::Base.establish_connection ->
    ActiveLdap::Base.setup_connection.